--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
-    <link rel="shortcut icon" href="./img/logo.svg">
+    <link rel="shortcut icon" href="img/logo.svg">
     <title>EVARUGS</title>
 </head>
 <body>
@@ -14,16 +14,16 @@
         <div class="container">
             <div class="contact__content">
                 <div class="contact__tel">
-                    <img src="./img/tel.png" alt="telefone" class="contact__tel-logo">
+                    <img src="img/tel.png" alt="telefone" class="contact__tel-logo">
                     <span class="contact__tel-vel">+375 29 292-29-29 (VEL)</span>
                     <span class="contact__tel-mtc">+375 33 333-33-33 (MTC)</span>
                 </div>
                 <div class="contact__city">
-                    <img src="./img/city.png" alt="city" class="contact__city-logo">
+                    <img src="img/city.png" alt="city" class="contact__city-logo">
                     <span class="contact__city-text">ваш город</span>
                 </div>
                 <div class="contact__instagram">
-                    <img src="./img/IG-header.png" alt="IG" class="contact__instagram-logo">
+                    <img src="img/IG-header.png" alt="IG" class="contact__instagram-logo">
                     <a src="#!" class="contact__instagram-text">посетите нашу страницу</a>
                 </div>
             </div>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="content__content">
                 <div class="content__logo">
-                    <img src="./img/logo.svg" alt="logo" class="content__img">
+                    <img src="img/logo.svg" alt="logo" class="content__img">
                     <span class="content__title">EVARUGS</span>
                 </div>
                 <nav class="content__nav">
@@ -55,7 +55,7 @@
                     <button class="title__offer"><span class="title__offer-text">ЗАКАЗАТЬ</span></button>
                 </section>
                 <div class="title__img">
-                    <img class="title__logo" src="./img/коврф 1.png" alt="EVARUGS">
+                    <img class="title__logo" src="img/коврф 1.png" alt="EVARUGS">
                 </div>
             </div>
         </div>
@@ -67,17 +67,17 @@
             </h1>
             <div class="info__content">
                 <div class="info__card">
-                    <img class="info__img" src="./img/card1.jpg" alt="card">
+                    <img class="info__img" src="img/card1.jpg" alt="card">
                     <h2 class="info__title">МАТЕРИАЛ</h2>
                     <div class="info__text">Коврики EVA всесезонные и отличаются уникальной поверхностью материала с ячейками ромбовидной формы. Из-за чего вода не проливается при изъятии ковра и не плещется при езде. Коврики воду не пропускают.</div>
                 </div>
                 <div class="info__card">
-                    <img class="info__img" src="./img/card2.jpg" alt="card">
+                    <img class="info__img" src="img/card2.jpg" alt="card">
                     <h2 class="info__title">ОТЛИЧИЯ</h2>
                     <div class="info__text">Резиновые коврики загибаются и лезут на педали. EVA коврики такого не допустят! Специальные липучки держат его в одном положении. При желании, для водителя устанавливается подпятник из рельефного алюминия.</div>
                 </div>
                 <div class="info__card">
-                    <img class="info__img" src="./img/card3.jpg" alt="card">
+                    <img class="info__img" src="img/card3.jpg" alt="card">
                     <h2 class="info__title">РАСЦВЕТКА</h2>
                     <div class="info__text">Автомобильные коврики EVA можно заказать и в индивидуальных размерах и в разных цветах, которые комбинируется на выбор покупателя с такими же цветами окантовочной полипропиленовой ременной ленты.</div>
                 </div>
@@ -86,20 +86,20 @@
     </section>
     <section class="review">
         <section class="review__opinion">
-            <img src="./img/face1.png" alt="face" class="review__img">
+            <img src="img/face1.png" alt="face" class="review__img">
             <div class="review__text">Коврики супер!!! Качество на высшем уровне!!!
 Удачи и побольше заказов вам!!! Большое спасибо!</div>
-            <img class="review__line" src="./img/Line.png">
+            <img class="review__line" src="img/Line.png">
         </section>
         <section class="review__opinion">
-            <img src="./img/face2.png" alt="face" class="review__img">
+            <img src="img/face2.png" alt="face" class="review__img">
             <div class="review__text">Покупала у ребят коврики для Хундай солярис в подарок молодому человеку. Все очень понравилось. Буду советовать только вас.</div>
-            <img class="review__line" src="./img/Line.png">
+            <img class="review__line" src="img/Line.png">
         </section>
         <section class="review__opinion">
-            <img src="./img/face3.png" alt="face" class="review__img">
+            <img src="img/face3.png" alt="face" class="review__img">
             <div class="review__text">Спасибо, все приехало, поставил. Результатом доволен, в машине супер! Заказывал на Ниссан.</div>
-            <img class="review__line" src="./img/Line.png">
+            <img class="review__line" src="img/Line.png">
         </section>
     </section>
     <footer class="footer">
@@ -107,7 +107,7 @@
             <div class="footer__content">
                 <div class="footer__box">
                     <h2 class="footer__header">МЫ В СОЦИАЛЬНЫХ СЕТЯХ</h2>
-                    <a class="footer__img" href=""><img src="./img/IG-footer.png" alt=""></a>
+                    <a class="footer__img" href=""><img src="img/IG-footer.png" alt=""></a>
                 </div>
                 <div class="footer__box">
                     <h2 class="footer__header">КОНТАКТНЫЕ ТЕЛЕФОНЫ</h2>
@@ -119,8 +119,8 @@
                 </div>
             </div>
             <div class="footer__background">
-                <img src="./img/footer1.png" alt="small" class="footer__foto-1">
-                <img src="./img/footer2.png" alt="big" class="footer__foto-2">
+                <img src="img/footer1.png" alt="small" class="footer__foto-1">
+                <img src="img/footer2.png" alt="big" class="footer__foto-2">
             </div>
         </div>
     </footer>
